# ginkgo-welcome

./: .gitignore  meson.build  org.ginkgo.welcome.json
data/: meson.build  org.ginkgo.welcome.appdata.xml.in  org.ginkgo.welcome.desktop.in  org.ginkgo.welcome.gschema.xml
po/: POTFILES  meson.build
src/: ginkgo_welcome.gresource.xml  ginkgo_welcome.in  main.py  meson.build  pages.ui  window.py  window.ui
src/test/: test.py
